# comp_arch_lab3

./: .gitignore  README.md  golden_test.py  pyproject.toml  simulation.py  translator.py
.github/workflows/: python.yml
golden/: cat.yml  cool_command.yml  hello.yml  hello_user.yml  prob1.yml
inputs/: catInput.txt  name.txt
processor/: control_unit.py  data_path.py  isa.py
tasks/: cat.txt  cool_comand.txt  hello.txt  hello_user.txt  prob1.txt
